# rust-site

./: .gitignore  0.bootstrap.js  Cargo.toml  LICENSE  README.md  bootstrap.js  colorgrad.css  index.css  index.html  package-lock.json  package.json  style.css  style_copy.css  wasm.d.ts  wasm.js  wasm_bg.d.ts  wasm_bg.wasm
src/: app_router.rs  lib.rs
src/components/: footer.rs  mod.rs  projects.rs  resume.rs
src/routes/: blog.rs  index.rs  mod.rs  uses.rs
static/: .gitignore  index.html  package.json
www/: bootstrap.js  index.css  index.html  index.js  package.json  webpack.config.js
