[package]
name = "bilal2vec-github-io"
description = "Bilal's website"
repository = "https://github.com/bilal2vec/bilal2vec.github.io"
license = "MIT"
version = "0.1.0"
authors = ["Bilal Khan <bilal.khan1@uwaterloo.ca>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
yew-router = "0.14.0"
wasm-bindgen = "0.2.67"
wee_alloc = "0.4.5"

[profile.release]
# less code to include into binary
panic = 'abort' 
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z' 
# optimization for size 
# opt-level = 's' 
# link time optimization using using whole-program analysis
lto = true
